--- a/EP07/EP07.Rmd
+++ b/EP07/EP07.Rmd
@@ -12,6 +12,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ```{r}
 # Importamos las librerías
 library(dplyr)
+library(tidyverse)
 library(ggpubr)
 library(ez)
 library(emmeans)
@@ -21,9 +22,9 @@ library(coin)
 # Lectura de archivo
 # Se abre el CSV
 nombre_archivo <- "EP07 Datos.csv"
-carpeta <- "~/Documentos/ejercicios_R/EI/estadistica_inferencial_grupo6/EP07"
+carpeta <- "C:\\Users\\BastiánBritoGarrido\\Desktop\\estadistica_inferencial_grupo6\\EP07"
 ruta <- file.path(carpeta, nombre_archivo)
-datos <- read.csv2(ruta, stringsAsFactors = TRUE, sep = ",")
+datos <- read.csv(ruta,  sep = ",")
 datos
 ```
 
@@ -70,9 +71,9 @@ shapiro_C
 ```
 Como nuestro el p value de la prueba shapiro en las muestras de A es menor a nuestro nivel de significancia (alfa = 0.05), podemos decir que las observaciones no siguen una distribución normal.
 
-Como no siguen una distribución normal y los datos son muestras independientes, se usara la prueba no parametrica "Prueba de rangos con signo de Wilcoxon", ya que no se puede usar la prueba t studenen ni la z.
+Como no siguen una distribución normal y los datos son muestras independientes, se usara la prueba no parametrica "Prueba de Wilcoxon", ya que no se puede usar la prueba t studenen ni la z.
 
-Las condicions para la Prueba de rangos con signo de Wilcoxon son :
+Las condicions para la Prueba de rangos  de Wilcoxon son :
  - 1. Los pares de observaciones son independientes
  - 2. La escala de medicón empleada para ambas muestras debe ser a lo menos ordinal
 
@@ -92,7 +93,7 @@ prueba1 <- wilcox.test(muestras_A$tiempo.A, muestras_C$tiempo.C, alternative = "
 print(prueba1)
 ```
 
-Como nuestro p-value = 0.9299 y este es menor que la significancia considerada para este experimento de 0.05, no se puede rechazar la hipótesis nula que no hay diferencia en el tiempo de los algoritmos con respecto la media de los tiempos de ejecución entre las versiones A y C del algoritmo para instancias con 60 o más nodos.
+Como nuestro p-value = 0.9299 y este es mayor que la significancia considerada para este experimento de 0.05, no se puede rechazar la hipótesis nula que no hay diferencia en el tiempo de los algoritmos con respecto la media de los tiempos de ejecución entre las versiones A y C del algoritmo para instancias con 60 o más nodos.
 
 
 ## 2. 
@@ -100,6 +101,13 @@ Como nuestro p-value = 0.9299 y este es menor que la significancia considerada p
 ### La memorista también sospecha que, al comparar las mismas instancias de iguales características, las mejores soluciones encontradas por las versiones A y B tienen rendimientos distintos. ¿Estará en lo cierto?
 
 ### Para responder, filtren los datos para tener las instancias con 60 o más nodos y seleccionen las columnas con el mejor rendimiento de las versiones A y B en formato ancho. Usando como semilla el valor 33, obtengan una muestra aleatoria de 22 instancias. Realicen un análisis estadístico pertinente (enunciar hipótesis, revisar condiciones, seleccionar prueba) para responder la pregunta planteada, utilizando pruebas no paramétricas de ser necesario.
+
+Como son muestras apareadas, usaremos la prueba de rangos con signo de Wilcoxon, las condiciones para esta prueba son:
+
+1. Los pares de observaciones son independientes
+2. La escala de medición empleada para las observaciones es intrinsecamente continua.
+3. La escala de mediciones empleada para ambas muestras debe ser a lo menos ordinal
+
 
 ```{r}
 # Fijamos la semilla
@@ -116,6 +124,44 @@ datos_filtrados2 <- datos_60Nodos2 %>%
 
 datos_aleatorios2 <- sample_n(datos_filtrados2, 22)
 ```
+
+
+
+Primero probaremos la normalidad de los datos con Shapiro-Wilk
+```{r}
+# Comprobamos la normalidad de los datos con el test de Shapiro
+
+#Restamos los porcentajes de los mejore de a menos los mejores de B
+A_less_B <- datos_aleatorios2$mejor.A - datos_aleatorios2$mejor.B
+
+#Aplicamos Shapiro a la diferencia de los porcentajes
+shapiro_2 <- shapiro.test(A_less_B)
+shapiro_2
+```
+
+Como nuestro el p value de la prueba shapiro en las muestras de A es menor a nuestro nivel de significancia (alfa = 0.05), podemos decir que las observaciones no siguen una distribución normal.
+
+Como no siguen una distribución normal y los datos son muestras independientes, se usara la prueba no parametrica "Prueba de rangos con signo de Wilcoxon", ya que no se puede usar la prueba t studenen ni la z y los datos son correlacionados. Las condiciones para esta prueba son:
+
+1. Los pares de observaciones son independientes
+2. La escala de medición empleada para las observaciones es intrinsecamente continua.
+3. La escala de mediciones empleada para ambas muestras debe ser a lo menos ordinal
+
+Los pares de observaciones son elegidos aleatoriamente, por lo que se cumple la condición 1, la escala de medición empleada en las observaciones es el tiempo, por lo que la hace una escala continua y mejor que ordinal, ya que los datos son cuantitativos, cumpliendose las condiciones 2 y 3 respectivamente.
+
+Ho: Las mejores soluciones encontradas por las versiones A y B tienen rendimientos iguales
+Ha: Las mejores soluciones encontradas por las versiones A y B tienen rendimientos distintos
+
+Procedemos a usar la prueba de rangos con signos
+```{r}
+alfa <- 0.05
+
+#Aplicamos la prueba de wilcox con datos pareados
+prueba2 <- wilcox.test(datos_aleatorios2$mejor.A, datos_aleatorios2$mejor.B, alternative = "two.sided", paired = TRUE, conf.level = 1-alfa)
+prueba2
+
+```
+Como nuestro p.value es menor a nuestro nivel de significancia (alfa = 0.05), podemos decir con un 95% de certeza, que se rechaza la hipotesis nula a favor de la hipotesis alternativa, entonces, podemos decir que al comparar las mismas instancias de iguales características, las mejores soluciones encontradas por las versiones A y B tienen rendimientos distintos. 
 
 
 ## 3.-
@@ -139,20 +185,77 @@ datos_filtrados3 <- datos_45Nodos3 %>%
 
 
 # Sacamos los 15 tiempo random para A
-muestras_A <- datos_filtrados1 %>%
+muestras_3.A <- datos_filtrados1 %>%
   select(tiempo.A) %>%
   sample_n(15)
 
 # Sacamos los 15 tiempo random para B
-muestras_A <- datos_filtrados3 %>%
+muestras_3.B <- datos_filtrados3 %>%
   select(tiempo.B) %>%
   sample_n(15)
 
 # Sacamos los 14 tiempo random para C
-muestras_C <- datos_filtrados3 %>%
+muestras_3.C <- datos_filtrados3 %>%
   select(tiempo.C) %>%
   sample_n(15)
 ```
+
+Primero, probaremos la normalidad de los datos con el test de Shapiro
+```{r}
+# Comprobamos la normalidad de los datos con el test de Shapiro
+shapiro_3.A <- shapiro.test(muestras_3.A$tiempo.A)
+shapiro_3.B <- shapiro.test(muestras_3.B$tiempo.B)
+shapiro_3.C <- shapiro.test(muestras_3.C$tiempo.C)
+shapiro_3.A  
+shapiro_3.B 
+shapiro_3.C
+```
+Como el p.value de los tiempos de A, es menor a nuestro nivel de significancia (alfa = 0.05), los datos ya no siguen una distribución normal, por lo que tendremos que usar una prueba no parametrica.
+
+Como son más de 2 muestras y los datos son independiente, usaremos Kruskal-Wallis.
+
+Las condiciones de esta prueba son:
+
+  1. La variable independiente debe tener a lo menos dos niveles.
+  2. La escala de la variable dependiente debe ser, a lo menos ordinal
+  3. Las observacones son indepenientes entre sí.
+  
+- La condición 1 es cumple ya que, son 3 instancias, por lo que serian 3 niveles <--- revisar
+- La condición 2 se cumple ya que la variable dependiente es el tiempo, y como es continuo la hace mejor que ordinal.
+-La condición 3 se cumple ya que las muestras se eligen de forma aleatoria y entre par de observaciones son independientes.
+
+Ho: No hay diferencias significativas en el tiempo de ejecución entre las versiones del algoritmo cuando las instancias de prueba tienen 45 o más nodos.
+
+Ha: Hay diferencias significativas en el tiempo de ejecución entre las versiones del algoritmo cuando las instancias de prueba tienen 45 o más nodos.
+
+```{r}
+#Establecemos un nivel de significancia
+alfa <- 0.05
+
+d.f3 <- data.frame(muestras_3.A,muestras_3.B,muestras_3.C)
+
+datos3 <- d.f3 %>% pivot_longer(c("tiempo.A","tiempo.B","tiempo.C"), 
+                        names_to = "Algoritmo", values_to = "Tiempo")
+
+#Usamos la prueba de Kruskal-Wallis
+prueba3 <- kruskal.test(Tiempo~Algoritmo, data = datos3)
+prueba3
+```
+
+
+Como nuestro p.value es menor a nuestro nivel de significancia (alfa = 0.05), podemos decir con un 95% de certeza, que se rechaza la hipotesis nula a favor de la hipotesis alternativa, entonces, podemos decir que hay diferencias significativas en el tiempo de ejecución entre las versiones del algoritmo cuando las instancias de prueba tienen 45 o más nodos.
+
+Ahora hacemos el procedimiento post-hoc, para saber cual es el algoritmo que tiene tiempo diferentes
+
+```{r}
+#Hacemos el post-hoc
+post_hoc3 <- pairwise.wilcox.test(datos3$Tiempo,datos3$Algoritmo,
+                                  p.adjust.method = "holm",
+                                  paired = FALSE)
+post_hoc3
+```
+Como se puede ver en el procedimiento post-hoc, podemos concluir con un 95% de confianza que existen diferencias significativas entre los tiempos de ejecución de todos los pares de algoritmos excepto los algoritmos A y C.
+
 
 ## 4.-
 ### La memorista también sospecha que, al comparar las mismas instancias con iguales características, las mejores soluciones encontradas por las diferentes versiones del algoritmo tienen rendimientos distintos. ¿Estará en lo cierto?
